--- a/invokeai/frontend/web/package.json
+++ b/invokeai/frontend/web/package.json
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "@chakra-ui/react-use-size": "^2.1.0",
+    "@chakra-ui/styled-system": "^2.9.2",
     "@dagrejs/graphlib": "^2.1.13",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/utilities": "^3.2.2",
